# distance_functions

./: .gitignore  Cargo.toml  play.ipynb  pyproject.toml  setup.py  test.py
.cargo/: config
distance_functions/: __init__.py  distance_functions.cp311-win_amd64.pyd  distance_functions.cp312-win_amd64.pyd
src/: lib.rs  main.rs
src/dist_functions/: euclidean_distance.rs  mod.rs
src/distance_functions/: euclidean_distance.rs  jaccard_similarity.rs  levenshtein_distance.rs  mod.rs
