[package]
name = "distance_functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "1.7.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]






[lib]
name = "distance_functions"
crate-type = ["cdylib"]