[package]
name = "distance_functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "1.7.0"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]


[lib]
name = "distance_functions"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = { git = "https://github.com/pyo3/pyo3", features = ["resolve-config"] }
