[project]
name = "distance_functions"
version = "0.1.0"
description = ""
dependencies = ["cffi"]
classifiers = [
    "Development Status :: 5 - Production/Unstable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"


# [project.urls]
# Changelog = "https://github.com/ijl/orjson/blob/master/CHANGELOG.md"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
skip-auditwheel = false
strip = true

